fix scrollbar in sidebar

--- a/style.css
+++ b/style.css
@@ -74,6 +74,9 @@ body{
 /* #endregion debug */
 
 /* #region sidebar */
+.bar{
+    height: calc(100% - 100px);
+}
 .sidebar{
     background-color: var(--Spot-dark);
 }
@@ -84,12 +87,15 @@ body{
 .sidebar nav{
     padding-bottom: 30px;
     color: var(--Spot-text);
+    height: 300px;
 }
-.sidebar nav .mobile{
+.sidebar .mobile{
     display: none;
 }
 .column{
    padding: 0 10px;
+   height: calc(100% - 400px);
+   overflow-y: auto;
 }
 .sidebar nav img{
     width: 30px;
@@ -98,11 +104,11 @@ body{
     margin-left: 10px;
 }
 .mark{
-    height: 30px;
+    padding: 30px 0;
     width: 3px;
     background-color: var(--Spot-decoration);
     margin-bottom: 12px;
-}
+} 
 #logo{
     filter: invert(0);
     width: 173px;
@@ -114,6 +120,7 @@ body{
     padding-left: 10px;
 }
 /* #region playlist */
+
 .playlist h2{
     color: white;
     font-size: 18px;
@@ -138,7 +145,7 @@ body{
 /* #region profile */
 .profile{
     color: var(--Spot-text);
-    margin-top: 9rem;
+    height: 100px;
 }
 .profile h5 i, .profile_mobile i{
     border: 1px solid var(--Spot-text);
@@ -213,9 +220,9 @@ body{
     .container nav .mark{
         width: 40%;
         margin: auto;
-        height: 3px;
         margin-top: 5px;
         margin-bottom: 2rem;
+        padding: 2px 0;
     }
 /* #endregion nav */
 
@@ -477,7 +484,19 @@ body{
     nav .d_flex div, #logo, .playlist, .profile{
         display: none;
     }
-    .sidebar nav .mobile{
+    .bar{
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+    }
+    .mobile img{
+        width: 30px;
+        margin-left: 8px;
+        margin-bottom: 5px;
+    }
+    .sidebar .mobile{
         display: block;
     }
     .sidebar nav img{
